# My-Web-Intelligence-v2

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_fr.md  TESTING.md  codemeta.json  paper.bib  paper.md  pre-commit-config.example.yaml  pyproject.example.toml  pyproject.toml  pytest.ini  requirements-ml.txt  requirements.txt  settings-example.py
docker/searxng/: docker-compose.yml  limiter.toml  settings.yml
docs/: graph.schema.json  mwi_tutorial.ipynb  mwi_tutorial.md  mwi_tutorial_crawl.md  mwi_tutorial_install.md  search_router.md  search_router_architecture.md  searxng_setup.md  test-dev.md
jats/: paper.jats
migrations/: 007_add_html_fields.py  008_add_expression_original_url.py  009_add_expression_fetch_method.py  010_add_search_tables.py  011_word_lang.py  012_add_expressionlink_context.py  013_add_expression_indexes.py
mwi/: browser_pool.py  cli.py  controller.py  core.py  export.py  fetcher.py  link_context.py  llm_openrouter.py  model.py  normalize_pipeline.py  platform_heuristics.py  readable_pipeline.py  serpapi_router.py  url_normalizer.py
mwi/search/: __init__.py  models.py  router.py  utils.py
mwi/search/providers/: __init__.py  base.py  brave.py  searxng.py  serpapi.py  serper.py  tavily.py
scripts/: install-basic.py  install-llm.py  install_utils.py  measure_heuristic_resolution.py  prune_malformed_links.py  reconstruct_domains.py
scripts/legacy/: merge_archive_duplicates.py  unwrap_archive_urls.py
tests/: conftest.py  test_01_installation.py  test_02_land_management.py  test_03_data_collection.py  test_04_export.py  test_05_media_analysis.py  test_06_embeddings.py  test_07_integration.py  test_08_expression_html.py  test_09_url_normalize.py  test_10_fetcher.py  test_11_curl_cffi_strategy.py  test_12_playwright_strategy.py  test_13_fetch_method.py  test_14_retry_status.py  test_15_dynamic_media_pool.py  test_16_serpapi_router.py  test_17_search_models.py  test_18_search_provider_searxng.py  test_19_search_provider_brave.py  test_20_search_provider_serper.py  test_21_search_provider_serpapi.py  test_22_search_provider_tavily.py  test_23_search_router.py  test_24_search_controller.py  test_25_search_integration.py  test_26_multilang.py  test_27_sprint_fixes.py  test_28_link_context.py  test_29_fullhtml_linknetwork.py  test_30_markdown_link_parser.py  test_31_consolidate_links.py  test_32_validate_update.py  test_33_domain_heuristics.py
tests/fixtures/: mock_mercury_response.json  mock_seorank_response.json  mock_serpapi_response.json  sample_html_page.html  sample_urls.txt
tests/legacy/: test_cli_commands.py  test_corpus_export.py  test_dynamic_media.py  test_serpapi.py
