[project]
name = "mywebintelligence"
version = "1.0.0"
description = "Reproducible web-mining toolkit for digital methods in the social sciences and humanities (MyWebIntelligence / MWI)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Amar Lakel" },
]

# Runtime dependencies — source of truth (mirrors the legacy requirements.txt,
# which is now a generated artifact via `uv export`). `pytest` lives in the
# `dev` group below, not here.
dependencies = [
    # Upper bound: aiohttp 3.14 made ClientResponse.__init__ require a new
    # `stream_writer` kwarg, which the latest aioresponses (0.7.8) test mock
    # does not pass — breaking the search-provider tests. Production code paths
    # work on 3.13.x. Lift this cap once aioresponses ships aiohttp-3.14 support.
    "aiohttp>=3.9.3,<3.14",
    "aiosignal>=1.3.1",
    "async-timeout>=4.0.3",
    "attrs>=23.2.0",
    "beautifulsoup4>=4.12.3",
    "Pillow>=10.0.0",
    "numpy>=1.26.4",
    "scikit-learn>=1.4.2",
    "imagehash>=4.3.1",
    "certifi>=2023.1.1",
    "click>=8.1.3",
    "colorama>=0.4.4",
    "frozenlist>=1.4.0",
    "idna>=3.4",
    "joblib>=1.4.0",
    "lxml>=4.9.0",
    "multidict>=6.0.4",
    "nltk>=3.8",
    "peewee>=3.15.0",
    "regex>=2023.1.1",
    "requests>=2.31.0",
    "soupsieve>=2.4.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.5.0",
    "urllib3>=2.0.0",
    "wrapt>=1.15.0",
    "yarl>=1.9.0",
    "trafilatura>=1.6.0",
    "langdetect>=1.0.9",
    "PyMuPDF>=1.24.4",
    "playwright>=1.42.0",
    "curl_cffi>=0.7.0",
]

[project.optional-dependencies]
# Optional ML extras (ANN + NLI: FAISS + transformers/sentencepiece/torch).
# Install with: `uv sync --extra ml`  (mirrors the legacy requirements-ml.txt).
ml = [
    "torch>=2.2",
    "transformers>=4.40",
    "tokenizers>=0.15",
    "sentencepiece>=0.1.99",
    "sentence-transformers>=2.6",
    "faiss-cpu>=1.12.0",
]

# Development / test tooling (PEP 735). Installed by default on `uv sync`,
# skipped with `--no-dev`. Captures pytest-asyncio + aioresponses, which the
# test suite has always required (search-router tests) but no requirements
# file ever declared — previously installed ad-hoc in CI.
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.6",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.uv]
# MWI is an application run via `python mywi.py` (flat layout, PYTHONPATH=.),
# not an installable library. `package = false` makes uv install the
# dependencies into the environment without trying to build/install the
# project itself.
package = false
